--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+# Installing PyTorch==1.0.1 because of issue #63 https://github.com/NVIDIA/sentiment-discovery/issues/63
+https://download.pytorch.org/whl/cpu/torch-1.0.1-cp36-cp36m-linux_x86_64.whl
 pandas
 scikit-learn
 matplotlib
@@ -7,6 +9,6 @@ seaborn
 emoji
 numpy
 tqdm
-torch==1.5.1+cpu
-torchvision==0.6.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
+# torch==1.5.1+cpu
+# torchvision==0.6.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
 
